Making the panel bigger when clicked
Using the toggle class

--- a/day5.html
+++ b/day5.html
@@ -113,9 +113,14 @@
   </div>
 
   <script>
+  const panels = document.querySelectorAll('.panel');
+  
+  function toggleOpen(){
+  	this.classList.toggle('open');
+  }
+  
+  panels.forEach(panel => panel.addEventListener('click', toggleOpen));
   </script>
-
-
 
 </body>
 </html>
