Adding flex to open event

--- a/day5.html
+++ b/day5.html
@@ -68,6 +68,7 @@
     .panel.open-active > *:first-child { transform: translateY(0); }
     .panel > *:last-child { transform: translateY(100%); }
     .panel.open-active > *:last-child { transform: translateY(0); }
+    
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
@@ -79,6 +80,7 @@
       font-size: 4em;
     }
     .panel.open {
+      flex: 5;
       font-size: 40px;
     }
   </style>
